--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,174 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background-color: #232730;
+  max-width: 1200px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.rating-form{
+  width: 400px;
+  height: 400px;
+  background-color: #1b1f28;
+  border-radius: 30px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.rating-form-star{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #262e3b;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
+.rating-title{
+  margin: 20px 0px 0px 30px;
+  color: #f9fdff;
+  font-weight: 600;
+  font-size: 30px;
+}
+
+.rating-text{
+  color: #9299a3;
+  font-size: 14px;
+  margin: 15px 30px 0px 30px;
+}
+
+.raiting-block{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 30px 30px 30px;
+}
+
+.one,
+.two,
+.three,
+.four,
+.five{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  background-color: #262f38;
+  border-radius: 50%;
+  color: #878f99;
+  font-size: 17px;
+  cursor: pointer;
+}
+
+.one:hover,
+.two:hover,
+.three:hover,
+.four:hover,
+.five:hover{
+  background-color: #7c8898;
+  color: #faffff;
+}
+
+.one-active,
+.two-active,
+.three-active,
+.four-active,
+.five-active{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  background-color: #fb7617;
+  border-radius: 50%;
+  color: #fbffff;
+}
+
+.bloc-btn{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.submit{
+  background-color: #fb7617;
+  border: 0;
+  outline: none;
+  width: 350px;
+  height: 45px;
+  border-radius: 30px;
   color: white;
+  transition: all 0.5s;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-weight: 600;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.submit:hover{
+  color: #fb7617;
+  background-color: white;
+  transition: all 0.5s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+    /* View Raiting */
+
+.view-raiting{
+  width: 400px;
+  height: 400px;
+  background-color: #1b1f28;
+  border-radius: 30px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+}
+
+.view-raiting-success-image{
+  margin: 0 auto;
+  margin-top: 40px;
+}
+
+.view-raiting-box-selected{
+  height: 30px;
+  width: 200px;
+  border-radius: 20px;
+  background-color: #203031;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  color: #fb7617;
+  margin-top: 40px;
+}
+
+.view-raiting-title{
+  color: #f9fdff;
+  font-weight: 600;
+  font-size: 30px;
+  text-align: center;
+  margin-top: 25px;
+}
+
+.view-raiting-text{
+  color: #9299a3;
+  font-size: 15px;
+  margin: 0px 30px;
+  text-align: center;
+  margin-top: 15px;
 }
